# gtkmm-cmake

./: .gitignore  CMakeLists.txt  README.md
assets/: gtkmm-template.cmb  main_window.ui  style.css
src/: application.cpp  main.cpp  window.cpp
src/include/: application.h  window.h
